webkitgtk (2.0.3-2) UNRELEASED; urgency=low

  * debian/compat:
    + Go back to compat 8 for now as compressed symbol files kill .deb
      compression. Also objcopy seems to take a lot of memory to compress
      debugging symbols, killing the build in some cases.
  * debian/rules:
    + Stop building with -O1 on armhf. Hopefully the compiler error we were
      getting has been fixed.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 17 Jun 2013 00:31:18 +0200

webkitgtk (2.0.3-1) experimental; urgency=low

  * Team upload.

  * debian/libwebkit2gtk-3.0-25.symbols:
    + Added missing i386 symbols. Should really fix the i386 build.
      Closes: #704886.
  * debian/rules:
    + Pass -I Source/autotools to autoreconf to make sure aclocal can find
      the necessary macros, as otherwise some versions such as aclocal-1.11
      have some trouble with this.
    + Add --disable-jit back on mipsel, armel and powerpc. The change was
      probably lost with the webkit2 addition.
    + Don't pass --with-gstreamer=1.0 anymore, GStreamer support is always
      1.0 now and the configure flag has been dropped.
    + Don't pass --disable-plugin-process. The flag is gone and the plugin
      process is always built for WebKit2, which is what we were doing.
    + Don't pass --disable-jit on powerpc. Instead disable JIT, YARR and
      assembler in ia64 powerpc sparc s390 and s390x as there's no
      support for MacroAssembler for them.
  * debian/patches/changeset_145551.diff:
    + Backport from upstream, implement Double2Ints in CLoop backend for
      32 bit architectures, needed for the above architectures where we
      disable JIT, YARR and assembler.
  * debian/control:
    + Build depend on libgudev-1.0-dev on linux for gamepad support.
  * debian/patches/10_hurd_getCurrentExecutablePath.patch:
    + Readd patch from #669059 that was lost. Fixes build on hurd.

  * New upstream release.
  * changeset_150117.diff, changeset_150326.diff, changeset_150963.diff: